--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
                 </ul>
             </div>
         </header>
+    </div>
+    <div class="container-gumka">
         <section>
             <div class="block1">
                 <p> Освоив Враджана-пранаяму, вы сможете легко преодолевать большие расстояния даже с грузом, не уставая, без одышки и перебоев в сердцебиении. </p>
             </div>
         </section>
+    </div>
+    <div class="container-gumka">
         <div class="clear-fix">
             <section class="box-content">
                 <aside>
@@ -53,16 +57,17 @@
                 <section>
                     <article>
                         <h2>Полное дыхание</h2>
-                        
                         <p> Полное йоговское дыхание поможет вам снять усталость и «невыспаноость».</p>
-                        <div class="img-left">
-                        <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-left" width="50"> </div>
+                        <div class="img-left"> <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-left" width="50"> </div>
                         <p>Увеличит потенциал ваших легких, поможет вывести мокроту, снять застойные явления, поможет снять астматический спазм, успокоит работу сердца, освежит кровь. </p>
-                        <p>При освоении полного дыхания, вы учитесь быть внимательными к работе легких, уровню кислорода и углекислого газа в крови. <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-right" width="50">Это поможет вам вовремя определять причины плохого самочувствия и устранять их при помощи полноценного дыхания.</p> 
+                        <p>При освоении полного дыхания, вы учитесь быть внимательными к работе легких, уровню кислорода и углекислого газа в крови. <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-right" width="50">Это поможет вам вовремя определять причины плохого самочувствия и устранять их при помощи полноценного дыхания.</p>
+                        <p>Устанавливает, с какой стороны элемента запрещено его обтекание другими элементами. Если задано обтекание элемента с помощью свойства float, то clear отменяет его действие для указанных сторон.</p>
                     </article>
                 </section>
             </section>
         </div>
+    </div>
+    <div class="container-gumka">
         <div class="clear-fix">
             <section class="content-bottom">
                 <div class="bef-foot1">
@@ -73,6 +78,8 @@
                 </div>
             </section>
         </div>
+    </div>
+    <div class="container-gumka">
         <div class="clear-fix">
             <footer>
                 <ul class="footer-nav">
