--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                     <article>
                         <h2>Полное дыхание</h2>
                         <p> Полное йоговское дыхание поможет вам снять усталость и «невыспаноость».</p>
-                        <div class="img-left"> <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-left" width="50"> </div>
+                        <figure class="img-left"> <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-left" width="50"> </figure>
                         <p>Увеличит потенциал ваших легких, поможет вывести мокроту, снять застойные явления, поможет снять астматический спазм, успокоит работу сердца, освежит кровь. </p>
-                        <p>При освоении полного дыхания, вы учитесь быть внимательными к работе легких, уровню кислорода и углекислого газа в крови. <img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-right" width="50">Это поможет вам вовремя определять причины плохого самочувствия и устранять их при помощи полноценного дыхания.</p>
+                        <p>При освоении полного дыхания, вы учитесь быть внимательными к работе легких, уровню кислорода и углекислого газа в крови.
+                            <figure><img src="image/vajrasana.jpg" alt="Vajrasana" class="vajrasana-right" width="50"></figure>Это поможет вам вовремя определять причины плохого самочувствия и устранять их при помощи полноценного дыхания.</p>
                         <p>Устанавливает, с какой стороны элемента запрещено его обтекание другими элементами. Если задано обтекание элемента с помощью свойства float, то clear отменяет его действие для указанных сторон.</p>
                     </article>
                 </section>
@@ -82,12 +83,14 @@
     <div class="container-gumka">
         <div class="clear-fix">
             <footer>
-                <ul class="footer-nav">
-                    <li> <a href="#">Главная</a> </li>
-                    <li> <a href="#">Контакты</a> </li>
-                    <li> <a href="#">О нас</a> </li>
-                    <li> <a href="#">Партнеры</a> </li>
-                </ul>
+                <nav>
+                    <ul class="footer-nav">
+                        <li> <a href="#">Главная</a> </li>
+                        <li> <a href="#">Контакты</a> </li>
+                        <li> <a href="#">О нас</a> </li>
+                        <li> <a href="#">Партнеры</a> </li>
+                    </ul>
+                </nav>
             </footer>
         </div>
     </div>
